--- a/live/templates/live/base.html
+++ b/live/templates/live/base.html
@@ -7,7 +7,7 @@
     <title>Quren - Forex Performance Tracker</title>
     {% load static %}
 
-    <link rel="icon" type="image/x-icon" href="{% static 'live/assets/img/quren_browser_icon.png' %}" />
+    <link rel="icon" type="image/x-icon" href="{% static '/assets/img/quren_browser_icon.png' %}" />
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
@@ -21,13 +21,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.7.0/chart.min.js"></script>
 
     <!-- custom css & js -->
-    <link rel="stylesheet" href="{% static 'live/css/style.css' %}">
+    <link rel="stylesheet" href="{% static '/css/style.css' %}">
   </head>
   <body>
       <nav>
         <div class="logo">
           <a href="{% url 'homepage' %}">
-            <img class='img-fluid' src="{% static 'live/assets/img/quren_icon.png' %}" id="nav-icon"/>
+            <img class='img-fluid' src="{% static '/assets/img/quren_icon.png' %}" id="nav-icon"/>
           </a>
         </div>
         <div class="ui divider"></div>
@@ -57,12 +57,12 @@
       <div class="ui equal width grid" style="margin:auto">
         <div class="column" style="text-align:center">
           <a href="https://github.com/Heightsdesign/forex_performance_tracker">
-            <img src="{% static 'live/assets/img/github_icon.png' %}"/>
+            <img src="{% static '/assets/img/github_icon.png' %}"/>
           </a>
         </div>
         <div class="column" style="text-align:center">
           <a href="{% url 'homepage' %}">
-            <img src="{% static 'live/assets/img/quren_icon-2.png' %}"/>
+            <img src="{% static '/assets/img/quren_icon-2.png' %}"/>
           </a>
         </div>
         <div class="column" style="text-align:center">
@@ -70,6 +70,6 @@
         </div>
       </div>
     </footer>
-  <script src="{% static 'live/js/main.js' %}" defer></script>
-  <script src="{% static 'live/js/semantic.js' %}" defer></script>
+  <script src="{% static '/js/main.js' %}" defer></script>
+  <script src="{% static '/js/semantic.js' %}" defer></script>
 </html>
