--- a/live/templates/live/base.html
+++ b/live/templates/live/base.html
@@ -44,11 +44,11 @@
           {% endif %}
           <li><a href="{% url 'info:about_us' %}">About</a></li>
         </ul>
-        <div class="burger">
+          <!--<div class="burger">
           <div class="line1"></div>
           <div class="line2"></div>
           <div class="line3"></div>
-        </div>
+        </div>-->
       </nav>
       {% block content %}
       {% endblock %}
