--- a/static/css/style.css
+++ b/static/css/style.css
@@ -12,17 +12,17 @@ body, html {
 }
 
 footer {
-         position: relative;
-         bottom: 0;
-         width: 100%;
-         height: 15%;
-         background-color: rgb(20, 20, 20);
-         color: #EDEDED;
-         font-family: 'Poppins', sans-serif;
-         font-size: 1.2em;
-         justify-content: space-around;
-         align-items: center;
-      }
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    height: 15%;
+    background-color: rgb(20, 20, 20);
+    color: #EDEDED;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    justify-content: space-around;
+    align-items: center;
+}
 
 
 .homepage-bg{
@@ -147,7 +147,7 @@ h2{
     opacity: 0;
 }
 
-/*nav{
+nav{
     position: relative;
     display: block;
     top: 0;
@@ -158,11 +158,8 @@ h2{
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     text-transform: uppercase;
-}*/
-
-.topnav {
-  overflow: hidden;
 }
+
 
 nav{
   padding: 20px;
@@ -175,12 +172,11 @@ nav{
   justify-content: space-around;
 }
 
-
 .nav-links{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 95%;
+    width: 100%;
 }
 
 .nav-links li{
@@ -196,44 +192,27 @@ nav{
     color: rgb(120, 28, 159) /* Theme Purle */
 }
 
-.burger{
-    display: none;
-}
-
-.burger div{
-    width: 25px;
-    height: 3px;
-    background-color: rgb(50, 49, 50);
-    margin: 5px;
-}
-
 @media screen and (max-width:1024px){
     .nav-links{
         display: flex;
         justify-content: space-around;
-        width: 60%;
+        width: 100%;
 
     }
 }
 
 @media screen and (max-width:768px){
 
-    header{
-        overflow-x: hidden;
+    .logo{
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
     }
 
     .nav-links{
-        position: absolute;
-            right: 0px;
-            height: 92vh;
-            top: 8vh;
-            background-color: #EDEDED;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 50%;
-            transform: translateX(100%);
-            transition: transform 0.8s ease-in;
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
     }
 
     .nav-links li{
@@ -245,33 +224,7 @@ nav{
         letter-spacing: 3px;
     }
 
-    .burger{
-        display: block;
-        cursor: pointer;
-    }
-    .logo{
-        position: absolute;
-            left: 0px;
-    }
 }
-
-.nav-active{
-    position: absolute;
-    transform: translateX(0%);
-    z-index: 10;
-}
-
-@keyframes navlinkfade{
-    from{
-        opacity: 0;
-        transform: translateX(0%);
-    }
-    to{
-        opacity: 1;
-        transform: translateX(50%);
-    }
-}
-
 
 #loginButton{
     background-color: #EDEDED;
