--- a/users/templates/users/sign_up_page.html
+++ b/users/templates/users/sign_up_page.html
@@ -17,51 +17,35 @@
         </div>
             <form class="mt-5" action="{% url 'users:sign_up' %}" method="POST">
                 {% csrf_token %}
-                <div class="sign-up-wrapper">
-                    <div class="row">
-                        <div class="col">
-                            <h3>Username</h3>
-                        </div>
-                        <div class="col">
-                            <div class="input-wrapper">
-                                <div class="ui input">
-                                    {{ form.username }}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <h3> Email </h3>
-                        </div>
-                        <div class="col">
-                            <div class="input-wrapper">
-                                <div class="ui input">
-                                    {{ form.email }}
-                                </div>
-                            </div>
+                <div class="ui two column stackable grid">
+                    <div class="column">
+                        <h3>Username</h3>
+                        <div class="ui input">
+                            {{ form.username }}
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col">
-                            <h3> Password </h3>
-                        </div>
-                        <div class="col">
-                            <div class="input-wrapper">
-                                <div class="ui input">
-                                    {{ form.password }}
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <h3> Capital </h3>
-                        </div>
-                        <div class="col">
-                            <div class="input-wrapper">
-                                <div class="ui input">
-                                    <input class="form-control" id="capital" name="capital" type="capital" placeholder="Capital" data-sb-validations="required,capital" />
-                                </div>
-                            </div>
+                    <div class="column">
+                        <h3> Email </h3>
+                        <div class="ui input">
+                            {{ form.email }}
                         </div>
                     </div>
+                </div>
+                <div class="ui two column stackable grid">
+                    <div class="column">
+                        <h3> Password </h3>
+                        <div class="ui input">
+                            {{ form.password }}
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h3> Capital </h3>
+                        <div class="ui input">
+                            <input class="form-control" id="capital" name="capital" type="capital" placeholder="Capital" data-sb-validations="required,capital" />
+                        </div>
+                    </div>
+                </div>
+                <div class="ui hidden divider"></div>
                 <button class="ui primary button" id="submitButton" type="submit">Sign Up</button>
             </form>
         </div>
