--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,15 @@ h2{
 
 }
 
+#dashboard h2{
+
+    font-size: 1rem;
+    color: #EDEDED;
+    letter-spacing: 4px;
+    margin: 0 auto;
+
+}
+
 .ghost-2 h1{
     opacity: 0;
 }
